Major bug fixes, a lot of logic changed when connecting components. New class "Triples" made for Circuit-Line-Circuit connection which is now used for better quality and less buggy code.